--- a/ol-config/OpenLocalizationTestOrg/AX-Docs-Sandbox/master/.localization-config
+++ b/ol-config/OpenLocalizationTestOrg/AX-Docs-Sandbox/master/.localization-config
@@ -48,7 +48,7 @@
          },
          "priorities":[  
             {  
-               "priority":"Basic",
+               "priority":"basic",
                "locales":[  
                   "fr-fr",
                   "da-dk",
@@ -65,7 +65,7 @@
          },
          "priorities":[  
             {  
-               "priority":"Basic",
+               "priority":"basic",
                "locales":[  
                   "ar-sa",
                   "zh-cn",
@@ -118,7 +118,7 @@
          },
          "priorities":[  
             {  
-               "priority":"Basic",
+               "priority":"basic",
                "locales":[  
                   "de-de",
 				  "sr-cyrl-rs"
@@ -134,7 +134,7 @@
          },
          "priorities":[  
             {  
-               "priority":"Basic",
+               "priority":"basic",
                "locales":[  
                   "fr-fr",
                   "nl-nl",
@@ -151,7 +151,7 @@
          },
          "priorities":[  
             {  
-               "priority":"Basic",
+               "priority":"basic",
                "locales":[  
                   "pt-br",
 				  "sr-cyrl-rs"
@@ -167,7 +167,7 @@
          },
          "priorities":[  
             {  
-               "priority":"Basic",
+               "priority":"basic",
                "locales":[  
                   "zh-cn",
 				  "sr-cyrl-rs"
@@ -183,7 +183,7 @@
          },
          "priorities":[  
             {  
-               "priority":"Basic",
+               "priority":"basic",
                "locales":[  
                   "cs-cz",
 				  "sr-cyrl-rs"
@@ -199,7 +199,7 @@
          },
          "priorities":[  
             {  
-               "priority":"Basic",
+               "priority":"basic",
                "locales":[  
                   "da-dk",
 				  "sr-cyrl-rs"
@@ -215,7 +215,7 @@
          },
          "priorities":[  
             {  
-               "priority":"Basic",
+               "priority":"basic",
                "locales":[  
                   "et-ee",
 				  "sr-cyrl-rs"
@@ -231,7 +231,7 @@
          },
          "priorities":[  
             {  
-               "priority":"Basic",
+               "priority":"basic",
                "locales":[  
                   "fi-fi",
 				  "sr-cyrl-rs"
@@ -247,7 +247,7 @@
          },
          "priorities":[  
             {  
-               "priority":"Basic",
+               "priority":"basic",
                "locales":[  
                   "fr-fr",
 				  "sr-cyrl-rs"
@@ -263,7 +263,7 @@
          },
          "priorities":[  
             {  
-               "priority":"Basic",
+               "priority":"basic",
                "locales":[  
                   "de-de",
 				  "sr-cyrl-rs"
@@ -279,7 +279,7 @@
          },
          "priorities":[  
             {  
-               "priority":"Basic",
+               "priority":"basic",
                "locales":[  
                   "hu-hu",
 				  "sr-cyrl-rs"
@@ -295,7 +295,7 @@
          },
          "priorities":[  
             {  
-               "priority":"Basic",
+               "priority":"basic",
                "locales":[  
                   "is-is",
 				  "sr-cyrl-rs"
@@ -326,7 +326,7 @@
          },
          "priorities":[  
             {  
-               "priority":"Basic",
+               "priority":"basic",
                "locales":[  
                   "it-it",
 				  "sr-cyrl-rs"
@@ -342,7 +342,7 @@
          },
          "priorities":[  
             {  
-               "priority":"Basic",
+               "priority":"basic",
                "locales":[  
                   "ja-jp",
 				  "sr-cyrl-rs"
@@ -358,7 +358,7 @@
          },
          "priorities":[  
             {  
-               "priority":"Basic",
+               "priority":"basic",
                "locales":[  
                   "lv-lv",
 				  "sr-cyrl-rs"
@@ -374,7 +374,7 @@
          },
          "priorities":[  
             {  
-               "priority":"Basic",
+               "priority":"basic",
                "locales":[  
                   "lt-lt",
 				  "sr-cyrl-rs"
@@ -405,7 +405,7 @@
          },
          "priorities":[  
             {  
-               "priority":"Basic",
+               "priority":"basic",
                "locales":[  
                   "es-es",
 				  "sr-cyrl-rs"
@@ -421,7 +421,7 @@
          },
          "priorities":[  
             {  
-               "priority":"Basic",
+               "priority":"basic",
                "locales":[  
                   "nl-nl",
 				  "sr-cyrl-rs"
@@ -437,7 +437,7 @@
          },
          "priorities":[  
             {  
-               "priority":"Basic",
+               "priority":"basic",
                "locales":[  
                   "nb-no",
 				  "sr-cyrl-rs"
@@ -453,7 +453,7 @@
          },
          "priorities":[  
             {  
-               "priority":"Basic",
+               "priority":"basic",
                "locales":[  
                   "pl-pl",
 				  "sr-cyrl-rs"
@@ -469,7 +469,7 @@
          },
          "priorities":[  
             {  
-               "priority":"Basic",
+               "priority":"basic",
                "locales":[  
                   "ru-ru",
 				  "sr-cyrl-rs"
@@ -485,7 +485,7 @@
          },
          "priorities":[  
             {  
-               "priority":"Basic",
+               "priority":"basic",
                "locales":[  
                   "ar-sa",
 				  "sr-cyrl-rs"
@@ -516,7 +516,7 @@
          },
          "priorities":[  
             {  
-               "priority":"Basic",
+               "priority":"basic",
                "locales":[  
                   "es-es",
 				  "sr-cyrl-rs"
@@ -532,7 +532,7 @@
          },
          "priorities":[  
             {  
-               "priority":"Basic",
+               "priority":"basic",
                "locales":[  
                   "fr-fr",
                   "de-de",
@@ -550,7 +550,7 @@
          },
          "priorities":[  
             {  
-               "priority":"Basic",
+               "priority":"basic",
                "locales":[  
                   "sv-se",
 				  "sr-cyrl-rs"
@@ -566,7 +566,7 @@
          },
          "priorities":[  
             {  
-               "priority":"Basic",
+               "priority":"basic",
                "locales":[  
                   "th-th",
 				  "sr-cyrl-rs"
@@ -582,7 +582,7 @@
          },
          "priorities":[  
             {  
-               "priority":"Basic",
+               "priority":"basic",
                "locales":[  
                   "tr-tr",
 				  "sr-cyrl-rs"
@@ -638,22 +638,22 @@
       {  
          "metadata":{  
             "ms.region":[  
-               "Austria,Germany",
-			   "Belgium,Netherlands,Sweden",
-               "Iceland,Norway",
-			   "Austria,Denmark,Norway",
-			   "Denmark,France,Germany,Ireland,Netherlands,United Kingdom",
-			   "Denmark,France,Germany,Iceland,Ireland,Netherlands,United Kingdom",
-			   "Belgium,Denmark,Finland,Norway,Switzerland",
-			   "Belgium,France,Germany,Norway,Spain,Sweden,Switzerland",
-			   "Austria,Belgium,Finland,Germany,Netherlands,Sweden",
-			   "Austria,Belgium,Denmark,Finland,Germany,Ireland,Italy,Netherlands,Spain,Sweden,United Kingdom",
-			   "Austria,Belgium,Denmark,Finland,France,Germany,Iceland,Ireland,Italy,Netherlands,Norway,Spain,Sweden,United Kingdom"
+               "Austria, Germany",
+			   "Belgium, Netherlands, Sweden",
+               "Iceland, Norway",
+			   "Austria, Denmark, Norway",
+			   "Denmark, France, Germany, Ireland, Netherlands, United Kingdom",
+			   "Denmark, France, Germany, Iceland, Ireland, Netherlands, United Kingdom",
+			   "Belgium, Denmark, Finland, Norway, Switzerland",
+			   "Belgium, France, Germany, Norway, Spain, Sweden, Switzerland",
+			   "Austria, Belgium, Finland, Germany, Netherlands, Sweden",
+			   "Austria, Belgium, Denmark, Finland, Germany, Ireland, Italy, Netherlands, Spain, Sweden, United Kingdom",
+			   "Austria, Belgium, Denmark, Finland, France, Germany, Iceland, Ireland, Italy, Netherlands, Norway, Spain, Sweden, United Kingdom"
             ]
          },
          "priorities":[  
             {  
-               "priority":"Basic",
+               "priority":"basic",
                "locales":[  
                   "da-dk",
                   "nl-nl",
@@ -673,17 +673,17 @@
       {  
          "metadata":{  
             "ms.region":[  
-               "Czech Republic,Hungary",
-			   "Estonia,Hungary,Latvia,Lithuania,Poland",
-               "Estonia,Lithuania",
-			   "Czech Republic,Estonia,Hungary,Latvia,Lithuania,Poland",
-			   "Czech Republic,Estonia,Hungary,Latvia,Lithuania,Poland,Russia",
-			   "Czech Republic,Estonia,Hungary,Latvia,Lithuania,Poland,Russia,Turkey"
+               "Czech Republic, Hungary",
+			   "Estonia, Hungary, Latvia, Lithuania, Poland",
+               "Estonia, Lithuania",
+			   "Czech Republic, Estonia, Hungary, Latvia, Lithuania, Poland",
+			   "Czech Republic, Estonia, Hungary, Latvia, Lithuania, Poland, Russia",
+			   "Czech Republic, Estonia, Hungary, Latvia, Lithuania, Poland, Russia, Turkey"
             ]
          },
          "priorities":[  
             {  
-               "priority":"Basic",
+               "priority":"basic",
                "locales":[  
                   "cs-cz",
                   "et-ee",
@@ -701,16 +701,16 @@
       {  
          "metadata":{  
             "ms.region":[  
-               "Austria,Belgium,Czech Republic,Estonia,Finland,Germany,Latvia,Lithuania,Netherlands,Sweden",
-			   "Austria,Belgium,Czech Republic,Denmark,Estonia,Finland,France,Germany,Hungary,Ireland,Italy,Latvia,Lithuania,Netherlands,Poland,Spain,Sweden,United Kingdom",
-			   "Austria,Belgium,Czech Republic,Denmark,Estonia,Finland,France,Germany,Hungary,Iceland,Italy,Latvia,Lithuania,Netherlands,Poland,Spain,Sweden,United Kingdom",
-			   "Austria,Belgium,Czech Republic,Denmark,Estonia,Finland,France,Germany,Hungary,Iceland,Ireland,Italy,Latvia,Lithuania,Netherlands,Poland,Spain,Sweden,United Kingdom",
-			   "Austria,Belgium,Czech Republic,Denmark,Estonia,Finland,France,Germany,Hungary,Iceland,Ireland,Italy,Latvia,Lithuania,Netherlands,Norway,Poland,Russia,Spain,Sweden,Turkey,United Kingdom"
+               "Austria, Belgium, Czech Republic, Estonia, Finland, Germany, Latvia, Lithuania, Netherlands, Sweden",
+			   "Austria, Belgium, Czech Republic, Denmark, Estonia, Finland, France, Germany, Hungary, Ireland, Italy, Latvia, Lithuania, Netherlands, Poland, Spain, Sweden, United Kingdom",
+			   "Austria, Belgium, Czech Republic, Denmark, Estonia, Finland, France, Germany, Hungary, Iceland, Italy, Latvia, Lithuania, Netherlands, Poland, Spain, Sweden, United Kingdom",
+			   "Austria, Belgium, Czech Republic, Denmark, Estonia, Finland, France, Germany, Hungary, Iceland, Ireland, Italy, Latvia, Lithuania, Netherlands, Poland, Spain, Sweden, United Kingdom",
+			   "Austria, Belgium, Czech Republic, Denmark, Estonia, Finland, France, Germany, Hungary, Iceland, Ireland, Italy, Latvia, Lithuania, Netherlands, Norway, Poland, Russia, Spain, Sweden, Turkey, United Kingdom"
             ]
          },
          "priorities":[  
             {  
-               "priority":"Basic",
+               "priority":"basic",
                "locales":[  
                   "cs-cz",
                   "da-dk",
@@ -738,13 +738,13 @@
       {  
          "metadata":{  
             "ms.region":[  
-               "China (PRC),Japan",
-			   "China (PRC),Japan,Thailand"
+               "China (PRC), Japan",
+			   "China (PRC), Japan, Thailand"
             ]
          },
          "priorities":[  
             {  
-               "priority":"Basic",
+               "priority":"basic",
                "locales":[  
                   "ja-jp",
                   "th-th",
@@ -757,12 +757,12 @@
       {  
          "metadata":{  
             "ms.region":[  
-               "Mexico,Brazil"
+               "Mexico, Brazil"
             ]
          },
          "priorities":[  
             {  
-               "priority":"Basic",
+               "priority":"basic",
                "locales":[  
                   "es-es",
                   "pt-br",
@@ -774,13 +774,13 @@
       {  
          "metadata":{  
             "ms.region":[  
-               "Canada,United States",
-			   "Canada,USA"
+               "Canada, United States",
+			   "Canada, USA"
             ]
          },
          "priorities":[  
             {  
-               "priority":"Basic",
+               "priority":"basic",
                "locales":[  
                   "fr-fr",
   				  "sr-cyrl-rs"
