--- a/ol-config/OpenLocalizationTestOrg/AX-Docs-Sandbox/master/.localization-config
+++ b/ol-config/OpenLocalizationTestOrg/AX-Docs-Sandbox/master/.localization-config
@@ -42,6 +42,50 @@
     },
     {
       "metadata": {
+        "ms.search.region": [
+          "Australia",
+          "Ireland",
+           "Malaysia",
+          "Singapore",
+          "United Kingdom",
+          "United States",
+          "USA"
+        ]
+      },
+      "priorities": [
+        {
+          "priority": "do-not-translate",
+          "locales": [
+            "ar-sa",
+            "zh-cn",
+            "cs-cz",
+            "da-dk",
+            "nl-nl",
+            "et-ee",
+            "fi-fi",
+            "fr-fr",
+            "de-de",
+            "hu-hu",
+            "is-is",
+            "it-it",
+            "ja-jp",
+            "lv-lv",
+            "lt-lt",
+            "nb-no",
+            "pl-pl",
+            "pt-br",
+            "ru-ru",
+            "es-es",
+            "sv-se",
+            "th-th",
+            "tr-tr",
+            "sr-cyrl-rs"
+          ]
+        }
+      ]
+    },
+    {
+      "metadata": {
         "ms.search.industry": [
           "Public sector"
         ]
@@ -125,21 +169,6 @@
             "sv-se",
             "th-th",
             "tr-tr",
-            "sr-cyrl-rs"
-          ]
-        }
-      ]
-    },
-    {
-      "metadata": {
-        "ms.search.region": [
-          "Australia"
-        ]
-      },
-      "priorities": [
-        {
-          "priority": "do-not-translate",
-          "locales": [
             "sr-cyrl-rs"
           ]
         }
@@ -341,21 +370,6 @@
     {
       "metadata": {
         "ms.search.region": [
-          "Ireland"
-        ]
-      },
-      "priorities": [
-        {
-          "priority": "do-not-translate",
-          "locales": [
-            "sr-cyrl-rs"
-          ]
-        }
-      ]
-    },
-    {
-      "metadata": {
-        "ms.search.region": [
           "Italy"
         ]
       },
@@ -412,21 +426,6 @@
           "priority": "basic",
           "locales": [
             "lt-lt",
-            "sr-cyrl-rs"
-          ]
-        }
-      ]
-    },
-    {
-      "metadata": {
-        "ms.search.region": [
-          "Malaysia"
-        ]
-      },
-      "priorities": [
-        {
-          "priority": "do-not-translate",
-          "locales": [
             "sr-cyrl-rs"
           ]
         }
@@ -531,21 +530,6 @@
     {
       "metadata": {
         "ms.search.region": [
-          "Singapore"
-        ]
-      },
-      "priorities": [
-        {
-          "priority": "do-not-translate",
-          "locales": [
-            "sr-cyrl-rs"
-          ]
-        }
-      ]
-    },
-    {
-      "metadata": {
-        "ms.search.region": [
           "Spain"
         ]
       },
@@ -628,51 +612,6 @@
     {
       "metadata": {
         "ms.search.region": [
-          "United Kingdom"
-        ]
-      },
-      "priorities": [
-        {
-          "priority": "do-not-translate",
-          "locales": [
-            "sr-cyrl-rs"
-          ]
-        }
-      ]
-    },
-    {
-      "metadata": {
-        "ms.search.region": [
-          "United States"
-        ]
-      },
-      "priorities": [
-        {
-          "priority": "do-not-translate",
-          "locales": [
-            "sr-cyrl-rs"
-          ]
-        }
-      ]
-    },
-    {
-      "metadata": {
-        "ms.search.region": [
-          "USA"
-        ]
-      },
-      "priorities": [
-        {
-          "priority": "do-not-translate",
-          "locales": [
-            "sr-cyrl-rs"
-          ]
-        }
-      ]
-    },
-    {
-      "metadata": {
-        "ms.search.region": [
           "Austria, Germany"
         ]
       },
@@ -716,6 +655,26 @@
             "nl-nl",
             "fr-fr",
             "sv-se",
+            "sr-cyrl-rs"
+          ]
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "ms.search.region": [
+          "Austria, Denmark, Italy, Norway, Spain"
+        ]
+      },
+      "priorities": [
+        {
+          "priority": "basic",
+          "locales": [
+            "de-de",
+            "da-dk",
+            "it-it",
+            "nb-no",
+            "es-es",
             "sr-cyrl-rs"
           ]
         }
@@ -1022,14 +981,16 @@
         "core/index.md",
         "financials/TOC.md",
         "financials/index.md",
-        "human-resources/TOC.md",
-        "human-resources/index.md",
+        "hr/TOC.md",
+        "hr/index.md",
         "manufacturing/TOC.md",
         "manufacturing/index.md",
         "platform/TOC.md",
+        "platform/dev-tools/dev-toc.md",
         "platform/index.md",
         "retail/TOC.md",
-        "retail/index.md"
+        "retail/index.md",
+        "retail/**/TOC.md"
       ],
       "priorities": [
         {
@@ -1110,8 +1071,8 @@
         "dev-itpro/**/*.md",
         "financials/*.md",
         "financials/**/*.md",
-        "human-resources/*.md",
-        "human-resources/**/*.md",
+        "hr/*.md",
+        "hr/**/*.md",
         "manufacturing/*.md",
         "manufacturing/**/*.md",
         "platform/*.md",
