change dontdeletefiles to false following conversation with Qin

--- a/ol-config/OpenLocalizationTestOrg/AX-Docs-Sandbox/master/.localization-config
+++ b/ol-config/OpenLocalizationTestOrg/AX-Docs-Sandbox/master/.localization-config
@@ -1089,7 +1089,7 @@
    "includeDependencies":false,
    "autoPush":true,
    "xliffVersion":"1.2",
-   "dontDeleteFiles":true,
+   "dontDeleteFiles":false,
    "translationSysFileDestination":"HandbackRepo",
    "autoHandbackNoChangeXliff":true,
    "markdownTransformerOptions":{  
