--- a/ol-config/OpenLocalizationTestOrg/AX-Docs-Sandbox/master/.localization-config
+++ b/ol-config/OpenLocalizationTestOrg/AX-Docs-Sandbox/master/.localization-config
@@ -1087,6 +1087,7 @@
     }
   ],
    "includeDependencies":false,
+   "forceHandoff": true,
    "autoPush":true,
    "xliffVersion":"1.2",
    "dontDeleteFiles":false,
