force handoff to test banner ho

--- a/ol-config/OpenLocalizationTestOrg/AX-Docs-Sandbox/master/.localization-config
+++ b/ol-config/OpenLocalizationTestOrg/AX-Docs-Sandbox/master/.localization-config
@@ -1093,7 +1093,8 @@
     }
   ],
    "includeDependencies":false,
-   "autoPush":true,
+  "autoPush": true,
+  "forceHandoff":  true,
    "xliffVersion":"1.2",
    "dontDeleteFiles":false,
    "translationSysFileDestination":"HandbackRepo",
